--- a/example/app.json
+++ b/example/app.json
@@ -1,5 +1,7 @@
 {
   "expo": {
     "sdkVersion": "25.0.0"
-  }
+  },
+  "name": "Red5ProMultiStreamExample",
+  "displayName": "Red5ProMultiStream"
 }
