--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -28,7 +28,7 @@ android {
     buildToolsVersion "25.0.3"
 
     defaultConfig {
-        applicationId "com.red5provideoviewexample"
+        applicationId "com.red5promultistreamexample"
         minSdkVersion 16
         targetSdkVersion 25
         versionCode 1
