oh good! now we have a failing integrated project.. but it is integrated

--- a/example/package.json
+++ b/example/package.json
@@ -23,6 +23,6 @@
     "react": "16.2.0",
     "react-native": "0.52.0",
     "react-native-permissions": "^1.0.1",
-    "react-native-red5pro-multistream": "git@github.com:infrared5/react-native-red5pro-multistream#develop"
+    "react-native-red5pro-multistream": "git@github.com:infrared5/react-native-red5pro-multistream#feature/ios_implementation"
   }
 }
