--- a/example/ios/Red5ProMultiStreamExample.xcodeproj/xcshareddata/xcschemes/Red5ProMultiStreamExample.xcscheme
+++ b/example/ios/Red5ProMultiStreamExample.xcodeproj/xcshareddata/xcschemes/Red5ProMultiStreamExample.xcscheme
@@ -101,6 +101,13 @@
             ReferencedContainer = "container:Red5ProMultiStreamExample.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "OS_ACTIVITY_MODE"
+            value = "disable"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
